Update social media links in index.html

--- a/index.html
+++ b/index.html
@@ -1115,10 +1115,10 @@ animation: scroll 12s linear infinite;
         </p>
         <h3 class="text-lg font-semibold mt-4">Social</h3>
         <div class="flex mt-2 space-x-3 text-xl">
-          <a href="https://www.facebook.com/flipkart/"><i class="fa-brands fa-facebook hover:text-green-500"></i></a>
-          <a href="https://x.com/flipkart?lang=gu"><i class="fa-brands fa-twitter hover:text-green-500"></i></a>
-          <a href="https://www.instagram.com/flipkart/"><i class="fa-brands fa-instagram hover:text-green-500"></i></a>
-          <a href="https://www.youtube.com/flipkart"><i class="fa-brands fa-youtube hover:text-green-500"></i></a>
+          <a href="https://www.facebook.com/balas milan/"><i class="fa-brands fa-facebook hover:text-green-500"></i></a>
+          <a href="https://x.com"><i class="fa-brands fa-twitter hover:text-green-500"></i></a>
+          <a href="https://www.instagram.com/_mr._balas/"><i class="fa-brands fa-instagram hover:text-green-500"></i></a>
+          <a href="https://www.youtube.com/@milanbhaibalas874"><i class="fa-brands fa-youtube hover:text-green-500"></i></a>
         </div>
       </div>
 
